docker-compose mysql master/slave and jvm gc note